--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -1,25 +1,25 @@
 <div class="container text-center">
     <div class="row justify-content-lg-center align-items-center">
         <div class="col">
-            <a href="/electric"><label style="cursor: pointer;"><img class="img-medium" src="../images/electric.png"><br><br><h4>일렉기타</h4></label></a>
+            <a href="/electric"><label style="cursor: pointer;"><img class="img-very-small" src="../images/electric.png"><br><div class="icon-des">일렉기타</div></label></a>
         </div>
         <div class="col">
-            <a href="/bass"><label style="cursor: pointer;"><img class="img-medium" src="../images/bass.png"><br><br><h4>베이스기타</h4></label></a>
+            <a href="/bass"><label style="cursor: pointer;"><img class="img-very-small" src="../images/bass.png"><br><div class="icon-des">베이스기타</div></label></a>
         </div>
         <div class="col">
-            <a href="/acoustic"><label style="cursor: pointer;"><img class="img-medium" src="../images/acoustic.png"><br><br><h4>통기타</h4></label></a>
+            <a href="/acoustic"><label style="cursor: pointer;"><img class="img-very-small" src="../images/acoustic.png"><br><div class="icon-des">통기타</div></label></a>
         </div>
         <div class="col">
-            <a href="/classic"><label style="cursor: pointer;"><img class="img-medium" src="../images/classic.png"><br><br><h4>클래식기타</h4></label></a>
+            <a href="/classic"><label style="cursor: pointer;"><img class="img-very-small" src="../images/classic.png"><br><div class="icon-des">클래식기타</div></label></a>
         </div>
         <div class="col">
-            <a href="/sound"><label style="cursor: pointer;"><img class="img-medium" src="../images/amp.png"><br><br><h4>앰프/헤드폰</h4></label></a>
+            <a href="/sound"><label style="cursor: pointer;"><img class="img-very-small" src="../images/amp.png"><br><div class="icon-des">앰프/헤드폰</div></label></a>
         </div>
         <div class="col">
-            <a href="/effector"><label style="cursor: pointer;"><img class="img-medium" src="../images/effector.png"><br><br><h4>이펙터</h4></label></a>
+            <a href="/effector"><label style="cursor: pointer;"><img class="img-very-small" src="../images/effector.png"><br><div class="icon-des">이펙터</div></label></a>
         </div>
         <div class="col">
-            <a href="/accessory"><label style="cursor: pointer;"><img class="img-medium" src="../images/accessory.png"><br><br><h4>악세사리</h4></label></a>
+            <a href="/accessory"><label style="cursor: pointer;"><img class="img-very-small" src="../images/accessory.png"><br><div class="icon-des">악세사리</div></label></a>
         </div>
     </div>    
 </div>
