--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,8 +6,17 @@ a{
     color: black;    
 }
 .img-small{
-    max-width: 50%;
-    max-height: 50%;
+    max-width: 35px;
+    max-height: 35px;
+}
+
+.img-very-small{
+    max-width: 70px;
+    max-height: 70px;
+}
+.icon-des {
+    font-size: 18px;
+    margin-top: 10px;
 }
 .img-medium{
     max-width: 75%;
@@ -16,4 +25,42 @@ a{
 .img-large{
     max-width: 100%;
     max-height: 100%;
+}
+
+.profileimg {
+    margin-left: 20px;
+}
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 10px;
+    border: 1px solid #888;
+    width: 30%; /* Could be more or less, depending on screen size */                          
+}
+/* The Close Button */
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
 }
