--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,39 +1,5 @@
 <br>
 <div class="container text-center">
-    <div class="row justify-content-center align-items-center">
-        <div class="col-lg-4">
-            <% if (is_active === true) { %>
-            <label><h5><%= fullname %>님! 방문을 환영합니다.</h5></label>
-            <% } else {%>
-            <label><h5>방문을 환영합니다.</h5></label>
-            <% } %>
-        </div>
-        <div class="col-lg-4">
-            <label><h5>Romie's Music : Music For Everyone</h5></label>
-        </div>
-        <% if (is_active === true) { %>
-            <div class="col-lg-1"></div>
-            <div class="col-lg-1">
-                <a href="/logout"><label><h5 style="cursor: pointer;">로그아웃</h5></label></a>
-            </div>
-        <% } else {%>
-            <div class="col-lg-1">
-                <a href="/login"><label><h5 style="cursor: pointer;">로그인</h5></label></a>
-            </div>
-            <div class="col-lg-1">
-                <a href="/register"><label><h5 style="cursor: pointer;">회원가입</h5></label></a>
-            </div>
-        <% } %>
-        <div class="col-lg-1">
-            <a href="/qna"><label><h5 style="cursor: pointer;">Q&A</h5></label></a>
-        </div>
-        <div class="col-lg-1">
-            <a href="/admin"><label><h5 style="cursor: pointer;">관리자</h5></label></a>
-        </div>
-    </div>
-</div>
-<hr>
-<div class="container text-center">
     <div class="row justify-content-lg-center align-items-center">
         <div class="col-lg-3">
             <a class="text-dark" href="/"><label><h1 style="cursor: pointer;">Romie's Music</h1></label></a>
@@ -51,9 +17,33 @@
         <div class="col"></div>
         <div class="col">
             <a href="/cart"><img class="img-small" src="../images/cart.png"></a>
-        </div>
-        <div class="col">
-            <a href="/account"><img class="img-small" src="../images/profile.png"></a>
+            <a id="account-btn"><img class="img-small profileimg" src="../images/profile.png"></a>
+            
+            <div id="myModal" class="modal">
+                <div class="modal-content">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-11"></div>
+                        <div class="col-md-1">
+                            <span class="close">&times;</span>
+                        </div>
+                    </div>
+                </div>
+                <br>                                                      
+                    <div class="d-grid gap-2 col-10 mx-auto">
+                        <% if (is_active === true) { %>
+                            <label><h5><%= fullname %>님! 방문을 환영합니다.</h5></label>
+                            <br>
+                            <button type="button" onclick="location.href='logout'" class="btn btn-outline-dark btn-lg">로그아웃</button>
+                        <% } else {%>
+                            <button type="button" onclick="location.href='login'" class="btn btn-outline-primary btn-lg">로그인</button>
+                            <br>
+                            <button type="button" onclick="location.href='register'" class="btn btn-outline-dark btn-lg">회원가입</button>
+                        <% } %>
+                    </div>
+                <br>
+                </div>
+            </div>
         </div>
     </div>
 </div>
