--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -27,7 +27,7 @@
                     <h1>가격 : <%= product.price.toLocaleString() %>원</h1>
                     <br>
                     <button style="font-size: 35px;" type="button" class="btn btn-outline-primary btn-lg">주문하기</button>
-                    <button style="font-size: 35px;" type="button" class="btn btn-outline-secondary btn-lg">장바구니</button>
+                    <button style="font-size: 35px;" onclick="alert('상품이 추가되었습니다.');" type="button" class="btn btn-outline-secondary btn-lg">장바구니</button>
                 </div>
             </div>
             <hr>
