--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,7 +26,10 @@ a{
     max-width: 100%;
     max-height: 100%;
 }
-
+.img-cart{
+    max-width: 100px;
+    max-height: 100px;
+}
 .profileimg {
     margin-left: 20px;
 }
