--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
 
     <article>
         <div class="container text-center">
-            <a href="/search?name=Ibanez"><img class="img-large" src="images/banner.jpeg"></a>
+            <a href="/search?name=Ibanez"><img class="img-very-large" src="images/banner.jpeg"></a>
         </div>
     </article>
 
