--- a/views/login.ejs
+++ b/views/login.ejs
@@ -55,7 +55,7 @@
                                 <br>
                                 <div class="d-grid gap-2 col-8 mx-auto">
                                 <button type="submit" class="btn btn-outline-primary btn-lg">로그인</button>
-                                <button type="button" onclick="location.href='register'" class="btn btn-outline-dark btn-lg">회원가입</button>
+                                <button type="button" onclick="location.href='/register'" class="btn btn-outline-dark btn-lg">회원가입</button>
                                 </div>
                             </p>
                           </div>
