--- a/public/css/style.css
+++ b/public/css/style.css
@@ -70,3 +70,16 @@ a{
     text-decoration: none;
     cursor: pointer;
 }
+
+.close2 {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+.close2:hover,
+.close2:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
