--- a/views/header.ejs
+++ b/views/header.ejs
@@ -8,7 +8,7 @@
             <form action="/search" method="get">
                 <div class="form-group">
                     <div class="input-group input-group-lg">
-                        <input type="text" id="name" name="name" class="form-control" placeholder="검색할 악기 정보를 입력하세요" aria-label="Product Name" aria-describedby="button-addon2">
+                        <input type="search" id="name" name="name" class="form-control" placeholder="검색할 악기 정보를 입력하세요" aria-label="Product Name" aria-describedby="button-addon2">
                         <button class="btn btn-outline-dark" type="submit" id="button-addon2">검색</button>
                     </div>
                 </div>
