--- a/views/register.ejs
+++ b/views/register.ejs
@@ -200,7 +200,7 @@
                             <br><br>
                             <div class="col-sm-12">
                                 <div class="input-group input-group-lg">
-                                    <input type="text" name="phone" class="form-control" id="inputPassword3" placeholder="전화번호 입력하세요" required>
+                                    <input type="tel" name="phone" class="form-control" id="inputPassword3" placeholder="전화번호 입력하세요" required>
                                 </div>
                             </div>
                             <br>
